crates/jolt_cli/tests/snapshots/cli_snapshots__config_errors_report_diagnostics.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot_normalized(&output, &[], temp.path())"
---
status: 1
stdout:
<empty>
stderr:
/private$TEMP/jolt.toml: indent-width must be greater than zero
files:
<none>
