crates/jolt_cli/tests/snapshots/cli_snapshots__config_help_describes_inspection_commands.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
Inspect Jolt configuration

Usage: jolt config <COMMAND>

Commands:
  init     Create a root Jolt config in the working directory
  list     List config files that apply to a path
  resolve  Print the effective config for a path
  schema   Print a JSON schema for configuration files
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
stderr:
<empty>
files:
<none>
