crates/jolt_cli/tests/snapshots/cli_snapshots__config_list_reports_discovered_configs.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot_normalized(&output, &[], temp.path())"
---
status: 0
stdout:
$TEMP/jolt.toml
$TEMP/src/jolt.toml
stderr:
<empty>
files:
<none>
