crates/jolt_cli/tests/snapshots/cli_snapshots__config_list_reports_no_configs.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
<empty>
stderr:
<empty>
files:
<none>
