crates/jolt_cli/tests/snapshots/cli_snapshots__config_schema_reports_dprint_schema.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
assertion_line: 114
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "dprint jolt plugin configuration",
  "description": "Outer schema shape for dprint's `dprint.jsonc`: plugin options nested under the `jolt` config key, with all other dprint global keys permitted.\n\nThis mirrors `crate::fmt::config::FormatOptionsPatch`, but uses camelCase field names to match dprint's plugin config convention rather than the kebab-case `jolt.toml` convention.",
  "type": "object",
  "properties": {
    "jolt": {
      "description": "Jolt-specific options; dprint global options (`lineWidth`, etc.) are applied as defaults when these are absent.",
      "anyOf": [
        {
          "$ref": "#/definitions/DprintFormatConfig"
        },
        {
          "type": "null"
        }
      ]
    }
  },
  "additionalProperties": true,
  "definitions": {
    "DprintFormatConfig": {
      "description": "Jolt formatter options under dprint's plugin config key.\n\ndprint accepts `null` as an explicit unset value for plugin options; the runtime treats that the same as an absent key after applying global defaults.",
      "type": "object",
      "properties": {
        "indentWidth": {
          "description": "Number of spaces per indentation level when `useTabs` is false.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint8",
          "maximum": 255.0,
          "minimum": 1.0
        },
        "lineWidth": {
          "description": "Preferred maximum rendered line width.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint16",
          "maximum": 65535.0,
          "minimum": 1.0
        },
        "useTabs": {
          "description": "Whether indentation should use tabs instead of spaces.",
          "type": [
            "boolean",
            "null"
          ]
        }
      },
      "additionalProperties": false
    }
  }
}
stderr:
<empty>
files:
<none>
