crates/jolt_cli/tests/snapshots/cli_snapshots__config_schema_reports_jolt_schema.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
assertion_line: 105
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "Jolt configuration",
  "description": "The `jolt.toml` (or `.config/jolt.toml`, `.config/jolt/config.toml`) file format: sparse formatting and file-selection overlays that merge across discovered config layers, CLI overrides, and built-in defaults. This same shape is used to load config files, to render the effective resolved config, and to generate the `jolt.toml` JSON schema.",
  "type": "object",
  "properties": {
    "files": {
      "description": "File discovery options.",
      "anyOf": [
        {
          "$ref": "#/definitions/FileSelectionPatch"
        },
        {
          "type": "null"
        }
      ]
    },
    "format": {
      "description": "Formatting options.",
      "anyOf": [
        {
          "$ref": "#/definitions/FormatOptionsPatch"
        },
        {
          "type": "null"
        }
      ]
    },
    "root": {
      "description": "Marks this config as the project root when set to true.",
      "type": [
        "boolean",
        "null"
      ]
    }
  },
  "additionalProperties": false,
  "definitions": {
    "FileSelectionPatch": {
      "description": "Sparse file-selection overlay shared by `jolt.toml`'s `[files]` table, CLI overrides, and the rendered effective configuration.",
      "type": "object",
      "properties": {
        "exclude": {
          "description": "Source file globs to exclude.",
          "type": [
            "array",
            "null"
          ],
          "items": {
            "type": "string"
          }
        },
        "include": {
          "description": "Source file globs to include.",
          "type": [
            "array",
            "null"
          ],
          "items": {
            "type": "string"
          }
        }
      },
      "additionalProperties": false
    },
    "FormatOptionsPatch": {
      "description": "Sparse formatter options shared by `jolt.toml`'s `[format]` table, CLI overrides, and the rendered effective configuration.\n\nAll fields are optional so a value can be left unset, letting it fall through to a less specific config layer, a CLI flag, or the built-in default.",
      "type": "object",
      "properties": {
        "indent-width": {
          "description": "Number of spaces per indentation level when `use-tabs` is false.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint8",
          "maximum": 255.0,
          "minimum": 1.0
        },
        "line-width": {
          "description": "Preferred maximum rendered line width.",
          "type": [
            "integer",
            "null"
          ],
          "format": "uint16",
          "maximum": 65535.0,
          "minimum": 1.0
        },
        "use-tabs": {
          "description": "Whether indentation should use tabs instead of spaces.",
          "type": [
            "boolean",
            "null"
          ]
        }
      },
      "additionalProperties": false
    }
  }
}
stderr:
<empty>
files:
<none>
