crates/jolt_cli/tests/snapshots/cli_snapshots__docs_manpages_generate_cohesive_set.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot_without_trailing_whitespace(&output, &files)"
---
status: 0
stdout:
<empty>
stderr:
<empty>
files:
-- jolt-completions.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-completions 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-completions \- Generate shell completions
.SH SYNOPSIS
\fBjolt completions\fR [\fB\-h\fR|\fB\-\-help\fR] <\fISHELL\fR>
.SH DESCRIPTION
Generate shell completions
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.TP
<\fISHELL\fR>
Shell to generate completions for
.br

.br
\fIPossible values:\fR
.RS 14
.IP \(bu 2
bash
.IP \(bu 2
elvish
.IP \(bu 2
fish
.IP \(bu 2
powershell
.IP \(bu 2
zsh
.RE
-- jolt-config-init.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-config-init 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-config\-init \- Create a root Jolt config in the working directory
.SH SYNOPSIS
\fBjolt config init\fR [\fB\-h\fR|\fB\-\-help\fR]
.SH DESCRIPTION
Create a root Jolt config in the working directory
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
-- jolt-config-list.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-config-list 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-config\-list \- List config files that apply to a path
.SH SYNOPSIS
\fBjolt config list\fR [\fB\-h\fR|\fB\-\-help\fR] [\fIPATH\fR]
.SH DESCRIPTION
List config files that apply to a path
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.TP
[\fIPATH\fR]
File or directory to inspect
-- jolt-config-resolve.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-config-resolve 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-config\-resolve \- Print the effective config for a path
.SH SYNOPSIS
\fBjolt config resolve\fR [\fB\-h\fR|\fB\-\-help\fR] [\fIPATH\fR]
.SH DESCRIPTION
Print the effective config for a path
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.TP
[\fIPATH\fR]
File or directory to inspect
-- jolt-config-schema.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-config-schema 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-config\-schema \- Print a JSON schema for configuration files
.SH SYNOPSIS
\fBjolt config schema\fR [\fB\-\-dprint\fR] [\fB\-h\fR|\fB\-\-help\fR]
.SH DESCRIPTION
Print a JSON schema for configuration files
.SH OPTIONS
.TP
\fB\-\-dprint\fR
Print the dprint plugin configuration schema
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
-- jolt-config.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-config 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-config \- Inspect Jolt configuration
.SH SYNOPSIS
\fBjolt config\fR [\fB\-h\fR|\fB\-\-help\fR] <\fIsubcommands\fR>
.SH DESCRIPTION
Inspect Jolt configuration
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.SH SUBCOMMANDS
.TP
jolt\-config\-init(1)
Create a root Jolt config in the working directory
.TP
jolt\-config\-list(1)
List config files that apply to a path
.TP
jolt\-config\-resolve(1)
Print the effective config for a path
.TP
jolt\-config\-schema(1)
Print a JSON schema for configuration files
-- jolt-format.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt-format 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt\-format \- Format source files
.SH SYNOPSIS
\fBjolt format\fR [\fB\-\-check\fR] [\fB\-\-line\-width\fR] [\fB\-\-indent\-width\fR] [\fB\-\-use\-tabs\fR] [\fB\-\-format\-with\-errors\fR] [\fB\-\-include\fR] [\fB\-\-exclude\fR] [\fB\-\-config\fR] [\fB\-\-no\-config\fR] [\fB\-\-stdin\-filename\fR] [\fB\-\-threads\fR] [\fB\-h\fR|\fB\-\-help\fR] [\fIPATHS\fR]
.SH DESCRIPTION
Format source files
.SH OPTIONS
.TP
\fB\-\-check\fR
Check whether files are formatted without writing changes
.TP
\fB\-\-line\-width\fR \fI<LINE_WIDTH>\fR
Preferred maximum rendered line width
.TP
\fB\-\-indent\-width\fR \fI<INDENT_WIDTH>\fR
Number of spaces per indentation level when using spaces
.TP
\fB\-\-use\-tabs\fR \fI<USE_TABS>\fR
Whether to use tabs for indentation
.br

.br
\fIPossible values:\fR
.RS 14
.IP \(bu 2
true
.IP \(bu 2
false
.RE
.TP
\fB\-\-format\-with\-errors\fR
Format files even when they contain syntax errors
.TP
\fB\-\-include\fR \fI<INCLUDE>\fR
Include source files matching this glob
.TP
\fB\-\-exclude\fR \fI<EXCLUDE>\fR
Exclude source files matching this glob
.TP
\fB\-\-config\fR \fI<CONFIG>\fR
Load only this explicit config file
.TP
\fB\-\-no\-config\fR
Disable discovered project configs
.TP
\fB\-\-stdin\-filename\fR \fI<STDIN_FILENAME>\fR
Path\-like name used for stdin language detection and diagnostics
.TP
\fB\-\-threads\fR \fI<THREADS>\fR
Number of formatter worker threads to use for filesystem paths
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.TP
[\fIPATHS\fR]
Files or directories to format. Use \*(Aq\-\*(Aq to read stdin
-- jolt.1 --
.ie \n(.g .ds Aq \(aq
.el .ds Aq '
.TH jolt 1  "jolt 0.20260721.0 ($COMMIT)" "Jolt Manual"
.SH NAME
jolt \- Fast, opinionated JVM and Kotlin Multiplatform project tooling.
.SH SYNOPSIS
\fBjolt\fR [\fB\-h\fR|\fB\-\-help\fR] [\fB\-V\fR|\fB\-\-version\fR] <\fIsubcommands\fR>
.SH DESCRIPTION
Fast, opinionated JVM and Kotlin Multiplatform project tooling.
.SH OPTIONS
.TP
\fB\-h\fR, \fB\-\-help\fR
Print help
.TP
\fB\-V\fR, \fB\-\-version\fR
Print version
.SH SUBCOMMANDS
.TP
jolt\-format(1)
Format source files
.TP
jolt\-config(1)
Inspect Jolt configuration
.TP
jolt\-completions(1)
Generate shell completions
.SH VERSION
v0.20260721.0 ($COMMIT)
