crates/jolt_cli/tests/snapshots/cli_snapshots__explicit_unknown_extension_file_is_processed_as_java.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"README.md\")])"
---
status: 0
stdout:
<empty>
stderr:
Formatted 1 file in $TIME
files:
-- README.md --
class Readme {
}
