crates/jolt_cli/tests/snapshots/cli_snapshots__explicit_unknown_extension_file_reports_unsupported_extension.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[temp.path().join(\"README.md\")])"
---
status: 1
stdout:
<empty>
stderr:
README.md: unsupported file extension
files:
-- README.md --
class Readme {}
