crates/jolt_cli/tests/snapshots/cli_snapshots__format_command_formats_stdin_to_stdout.snap
---
source: crates/jolt_cli/tests/cli_snapshots.rs
expression: "snapshot(&output, &[])"
---
status: 0
stdout:
class A {
}
stderr:
<empty>
files:
<none>
